@@ -1,6 +1,7 @@
 package com.khnure.timetable.synchronizer.controller;
 
 import com.khnure.timetable.synchronizer.dto.PaginationDto;
+import com.khnure.timetable.synchronizer.dto.PaginationResponse;
 import com.khnure.timetable.synchronizer.dto.UserDto;
 import com.khnure.timetable.synchronizer.mapper.UserMapper;
 import com.khnure.timetable.synchronizer.model.User;
@@ -9,14 +10,14 @@ import com.khnure.timetable.synchronizer.validator.UserGroup;
 import jakarta.validation.groups.Default;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
-import java.util.HashMap;
+import java.util.AbstractMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -27,19 +28,18 @@ public class UserController {
     private final UserMapper userMapper;
 
     @GetMapping("/users")
-    public ResponseEntity<?> getUsersWithPagination(
+    public PaginationResponse<UserDto> getUsersWithPagination(
             @Validated({Default.class, UserGroup.class}) @ModelAttribute PaginationDto paginationDto) {
         Page<User> userPage = userService.getUsers(paginationDto);
         List<UserDto> userDtoList = userPage.getContent().stream()
                 .map(userMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
 
-        Map<String, Object> response = new HashMap<>();
-        response.put("totalUsersNumber", userPage.getTotalElements());
-        response.put("totalPageNumber", userPage.getTotalPages());
-        response.put("currentPageNumber", userPage.getNumber() + 1);
-        response.put("users", userDtoList);
-
-        return ResponseEntity.ok(response);
+        return PaginationResponse.<UserDto>builder()
+                .totalItemNumber(new AbstractMap.SimpleEntry<>("totalUsersNumber", userPage.getTotalElements()))
+                .totalPageNumber(userPage.getTotalPages())
+                .currentPageNumber(userPage.getNumber() + 1)
+                .data(new AbstractMap.SimpleEntry<>("users", userDtoList))
+                .build();
     }
 }
